# cruding

./: Cargo.toml  README.md  flake.nix
apis/axum/: Cargo.toml
apis/axum/src/: extractors.rs  handlers.rs  lib.rs  prelude.rs  router.rs  state.rs  types.rs
apis/axum/tests/: axum_crud_routes.rs  axum_read_list_route.rs
caches/in_memory/: Cargo.toml
caches/in_memory/src/: lib.rs
caches/redis/: Cargo.toml
caches/redis/src/: lib.rs
common/cruding_qs_list_filter/: Cargo.toml
common/cruding_qs_list_filter/src/: json_parser.rs  lib.rs
core/: Cargo.toml
core/src/: handler.rs  hook.rs  hybrid_cache.rs  hybrid_cache_tests.rs  lib.rs  list.rs  redis_cache.rs
core/tests/: cruding_core.rs
cruding/: Cargo.toml
cruding/src/: lib.rs
examples/todo/: Cargo.toml
examples/todo/src/: lib.rs  main.rs  tags.rs  todo.rs
examples/todo/src/tags/: custom.rs
macros/: Cargo.toml
macros/macro_tests/derive_crudable_seaorm/: Cargo.toml  lib.rs
macros/macro_tests/derive_cruding_axum_state/: Cargo.toml  lib.rs
macros/src/: common.rs  crudable_seaorm_impl.rs  cruding_axum_state_impl.rs  lib.rs
sources/postgres/: Cargo.toml
sources/postgres/src/: lib.rs  serde_json_to_sea_orm_vals.rs
sources/postgres/tests/: postgres_source.rs  postgres_source_listing.rs
