[workspace]
resolver = "2"
members = ["apis/axum", "core", "sources/postgres"]

[workspace.dependencies]
moka = { version = "0.12.10", features = ["future"] }
tokio = { version  = "1.47.1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio"] }
kanal = "0.1.1"
async-trait = "0.1"
mockall = "0.13"
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1.0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27.2", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
    "ipnetwork",
] }
rand = "0.9"
regex = "1.11.1"
fake = { version = "4", features = ["derive", "chrono", "uuid"] }
futures = "0.3"
dashmap = "6"
arc-swap = "1.7.1"
axum = "0.8.4"
thiserror = "2.0.16"
serial_test = "3.2.0"

cruding_core = { path = "./core" }
cruding_pg_source = { path = "./sources/postgres" }
