[workspace]
resolver = "2"
members = ["apis/axum", "core", "cruding", "common/cruding_qs_list_filter", "sources/postgres", "examples/todo", "macros", "macros/macro_tests/*"]

[workspace.package]
license = "MIT"
repository = "https://github.com/dauaaa/cruding"
readme = "README.md"
keywords = ["api", "crud"]

[workspace.dependencies]
moka = { version = "0.12.10", features = ["future"] }
tokio = { version  = "1.47.1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio", "with-chrono", "with-uuid", "with-json", "with-rust_decimal" ] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
base64 = "0.22"
kanal = "0.1.1"
async-trait = "0.1"
mockall = "0.13"
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1.0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27.2", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
    "ipnetwork",
] }
rand = "0.9"
regex = "1.11.1"
fake = { version = "4", features = ["derive", "chrono", "uuid"] }
futures = "0.3"
dashmap = "6"
arc-swap = "1.7.1"
axum = "0.8.4"
thiserror = "2.0.16"
serial_test = "3.2.0"
tower-service = "0.3.3"
hyper = "1.7.0"
tower = "0.5.2"
okapi = "0.7.0"
schemars = { version = "0.8", features = ["derive"] }
nom = "8.0.0"
urlencoding = "2.1.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
anyhow = "1"

cruding = { path = "./cruding", version = "0.4.0" }
cruding_core = { path = "./core", version = "0.4.0" }
cruding_pg_source = { path = "./sources/postgres", version = "0.4.0"  }
cruding_axum_api = { path = "./apis/axum", version = "0.4.0"  }
cruding_qs_list_filter = { path = "./common/cruding_qs_list_filter", version = "0.4.0" }
cruding_macros = { path = "./macros", version = "0.4.0" }
