[package]
name = "cruding_core"
version = "0.1.0"
edition = "2024"

description = "core for the cruding crate"
license = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/cruding_core"
readme = { workspace = true }
keywords = ["api", "crud"]
categories = []

[dependencies]
moka = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
