[package]
name = "cruding_macros"
version = "0.4.0"
edition = "2024"
description = "macros for the cruding crate"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
