[package]
name = "cruding_axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
cruding_core = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
cruding_pg_source = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
okapi = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
futures = { workspace = true }
