[package]
name = "cruding_axum_api"
version = "0.2.0"
edition = "2024"

description = "axum Cruding api wrapper"
license = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/cruding_axum_api"
readme = { workspace = true }
keywords = ["api", "crud"]
categories = []

[dependencies]
axum = { workspace = true }
cruding_core = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
cruding_pg_source = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
okapi = { workspace = true }
schemars = { workspace = true }
cruding_qs_list_filter = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
futures = { workspace = true }
