[package]
name = "cruding_qs_list_filter"
version = "0.2.1"
edition = "2024"

description = "list filter parser implementation for the auto listing feature of cruding crate"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
nom = { workspace = true }
serde_json = { workspace = true }
cruding_core = { workspace = true }
