[package]
name = "cruding_pg_source"
version = "0.2.0"
edition = "2024"
description = "core for the cruding crate"

license = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/cruding_pg_source"
readme = { workspace = true }
keywords = ["api", "crud"]
categories = []

[dependencies]
cruding_core = { workspace = true }
moka = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
kanal = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
fake = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
cruding_qs_list_filter = { workspace = true }
rust_decimal = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
serial_test = { workspace = true }
